--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "firebase": "^10.14.1",
     "react": "18.3.1",
     "react-calendar": "^5.0.0",
